Fix main screen looking nice on mobile

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -46,40 +46,6 @@ body .showResults #plugin-search-form:before {display:none}
 }
 .isFiltered .filters .show-all {display: inline-block}
 
-#plugin-search-form {vertical-align:middle; padding:4rem 2rem}
-#plugin-search-form p{
-  box-sizing: content-box;
-  max-width: 35rem;
-  margin: 1rem auto;
-  font-size: 1.1rem;
-  text-align: left;
-  padding-left:145px;
-  color: white;
-}
-#plugin-search-form h1{
-    font-family: 'Georgia';
-    color: white;
-    font-size: 64px;
-    box-sizing: content-box;
-    position: relative;
-    padding-left: 145px;
-    font-weight: 700;
-    width: 35rem;
-    margin: 1.5rem auto 1rem;
-    text-align: left;
-}
-#plugin-search-form h1:before {display:inline-block; position:absolute; left:-150px; vertical-align:top; margin:-3rem 0 0; width:271px; height:294px; background:url('../images/jenkins-voltron-271x294x8.png') no-repeat;background-size:100%; content:''}
-#plugin-search-form .nav {
-    vertical-align:middle;
-    padding-left:145px
-    @media (max-width: 992px) {
-        padding: 0;
-    }
-}
-#plugin-search-form .nav > .btn-group {display:none;}
-#plugin-search-form .nav-box {display:inline-block; text-align:left;}
-
-
 .dependencies .req{
     font-size: .67rem;
     opacity: .67;
@@ -101,13 +67,13 @@ body #grid-box {padding-top: 30px; }
   body #grid-box {padding-top: 8px; }
 }
 
-body #grid-box .item-finder > .NoLabels {padding: 2rem 0; background:#e5f8ff}
-body #grid-box .item-finder > .NoLabels .Cols3 {font-size:.85rem}
-body #grid-box .item-finder > .NoLabels .Cols3 label > span {margin-left:.5rem}
-body #grid-box .item-finder .NoLabels .Entry-box {display:block;    padding: 0.25rem 0;
+body #grid-box .NoLabels {padding: 2rem 0; background:#e5f8ff}
+body #grid-box .NoLabels .Cols3 {font-size:.85rem}
+body #grid-box .NoLabels .Cols3 label > span {margin-left:.5rem}
+body #grid-box .NoLabels .Entry-box {display:block;    padding: 0.25rem 0;
     line-height: 1rem; font-size:.85rem}
-body #grid-box .item-finder .NoLabels .Entry-box a {cursor:pointer}
-body #grid-box .item-finder .NoLabels legend {font-size:1.1rem; }
+body #grid-box .NoLabels .Entry-box a {cursor:pointer}
+body #grid-box .NoLabels legend {font-size:1.1rem; }
 
 .update-link {margin:4rem 0;}
 .update-link h6 {margin-bottom:.25rem}
